--- a/src/styles.css
+++ b/src/styles.css
@@ -24,12 +24,12 @@ body {
   background-color: red;
 }
 
-svg {
+/* svg {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100vh;
-}
+} */
 
 g {
   pointer-events: all;
